fix: overflow of ordered-list and unordered-list

--- a/components/ordered-list/css/_mixin.scss
+++ b/components/ordered-list/css/_mixin.scss
@@ -5,7 +5,8 @@
  */
 
 @mixin utrecht-ordered-list {
-  /* Configure `width` and `text-align` for `--center` */
+  /* Configure `box-sizing` and `text-align` for `--center` */
+  box-sizing: border-box;
   font-family: var(--utrecht-document-font-family, inherit);
   font-size: var(
     --utrecht-ordered-list-font-size,
@@ -28,12 +29,13 @@
     var(--utrecht-unordered-list-padding-inline-start, 2ch)
   );
   text-align: start;
-  width: max-content;
 }
 
 @mixin utrecht-ordered-list--center {
+  inline-size: max-content;
   margin-inline-end: auto;
   margin-inline-start: auto;
+  max-inline-size: 100%;
 }
 
 @mixin utrecht-ordered-list--distanced {
